--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-native-richtext-editor": "^0.1.14",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "rich-text-editor-react": "^3.6.3"
   },
   "scripts": {
