--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "draft-js": "^0.11.6",
+    "express": "^4.17.1",
     "fontsource-roboto": "^2.2.6",
     "material-ui-popup-state": "^1.6.1",
     "mui-rte": "^1.24.0",
